[gd_scene load_steps=3 format=3 uid="uid://bicfe6o7ysdev"]

[ext_resource type="Script" path="res://Scripts/character.gd" id="1_xuakl"]
[ext_resource type="Texture2D" uid="uid://u2cyg1a5gcge" path="res://Textures/Characters/Mousse/Mousse_chibi.png" id="2_hbbpv"]

[node name="Mousse" type="Area2D"]
script = ExtResource("1_xuakl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_hbbpv")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-573, 742, -570, 931, -246, 970, -60, 868, 216, 871, 530, 892, 623, 682, 449, 613, 419, 436, 440, 221, 473, 14, 350, -34, 296, -316, 105, -325, -156, -259, -201, -43, -102, 137, -168, 355, -255, 544, -477, 649)

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
